syntax = "proto3";

package com.github.jchat;

option java_multiple_files = true;
option java_package = "com.github.jchat";

service User {
  rpc create (UserCreateRequest) returns (UserCreateResponse) {}
  rpc delete(UserDeleteRequest) returns (UserDeleteResponse){}
}

message UserCreateRequest {
  string username = 1;
  string name=2;
  string email=3;
  string mobileNo=4;
}

message UserCreateResponse{
  string message = 1;
  ResponseCode code = 2;
}


message UserDeleteRequest{
  string username=1;
}

message UserDeleteResponse{
  string message = 1;
  ResponseCode code = 2;
}

enum  ResponseCode{
    UNDEFINED=0;
    SUCCESS=1;
    FAILURE=2;
}